Modify admin rest api to support grant permission
