# modules/broker-core/src/gen/java/io/ballerina/messaging/broker/core/rest/model/ScopeUpdateResponse.java
@@ -27,27 +27,27 @@ import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
 
 
-public class MessageDeleteResponse   {
+public class ScopeUpdateResponse   {
   
-  private @Valid Integer numberOfMessagesDeleted = null;
+  private @Valid String message = null;
 
   /**
-   * Response message with number of messages deleted.
+   * Response message with status of the user groups delete operation.
    **/
-  public MessageDeleteResponse numberOfMessagesDeleted(Integer numberOfMessagesDeleted) {
-    this.numberOfMessagesDeleted = numberOfMessagesDeleted;
+  public ScopeUpdateResponse message(String message) {
+    this.message = message;
     return this;
   }
 
   
-  @ApiModelProperty(required = true, value = "Response message with number of messages deleted.")
-  @JsonProperty("numberOfMessagesDeleted")
+  @ApiModelProperty(required = true, value = "Response message with status of the user groups delete operation.")
+  @JsonProperty("message")
   @NotNull
-  public Integer getNumberOfMessagesDeleted() {
-    return numberOfMessagesDeleted;
+  public String getMessage() {
+    return message;
   }
-  public void setNumberOfMessagesDeleted(Integer numberOfMessagesDeleted) {
-    this.numberOfMessagesDeleted = numberOfMessagesDeleted;
+  public void setMessage(String message) {
+    this.message = message;
   }
 
 
@@ -59,21 +59,21 @@ public class MessageDeleteResponse   {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    MessageDeleteResponse messageDeleteResponse = (MessageDeleteResponse) o;
-    return Objects.equals(numberOfMessagesDeleted, messageDeleteResponse.numberOfMessagesDeleted);
+    ScopeUpdateResponse scopeUpdateResponse = (ScopeUpdateResponse) o;
+    return Objects.equals(message, scopeUpdateResponse.message);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(numberOfMessagesDeleted);
+    return Objects.hash(message);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class MessageDeleteResponse {\n");
+    sb.append("class ScopeUpdateResponse {\n");
     
-    sb.append("    numberOfMessagesDeleted: ").append(toIndentedString(numberOfMessagesDeleted)).append("\n");
+    sb.append("    message: ").append(toIndentedString(message)).append("\n");
     sb.append("}");
     return sb.toString();
   }
