# modules/broker-core/src/main/resources/swagger.yaml
@@ -110,6 +110,50 @@ paths:
               type: string
           schema:
             $ref: '#/definitions/Error'
+    put:
+      operationId: updateQueueAuthorization
+      summary: Update authorization of a queue
+      description: Grant permission to perform given action
+      consumes:
+        - application/json
+      parameters:
+        - in: path
+          name: name
+          type: string
+          required: true
+          description: Name of the auth resource
+        - in: body
+          name: body
+          required: true
+          description: Payload of update queue authorization request
+          schema:
+            $ref: '#/definitions/QueueUpdateRequest'
+      responses:
+        '201':
+          description: Queue authorization updated.
+          schema:
+            $ref: '#/definitions/QueueUpdateResponse'
+        '400':
+          description: Bad Request. Invalid request or validation error.
+          schema:
+            $ref: '#/definitions/Error'
+        '415':
+          description: >-
+            Unsupported media type. The entity of the request was in a not
+            supported format.
+          schema:
+            $ref: '#/definitions/Error'
+        '409':
+          description: Duplicate resource
+          schema:
+            $ref: '#/definitions/Error'
+        '401':
+          description: Authentication Data is missing or invalid
+          headers:
+            WWW_Authenticate:
+              type: string
+          schema:
+            $ref: '#/definitions/Error'
     delete:
       operationId: deleteQueue
       summary: Delete the specified queue.
@@ -457,6 +501,50 @@ paths:
               type: string
           schema:
             $ref: '#/definitions/Error'
+    put:
+      operationId: updateExchangeAuthorization
+      summary: Update authorization of exchange
+      description: Grant permission to perform given action
+      consumes:
+        - application/json
+      parameters:
+        - in: path
+          name: name
+          type: string
+          required: true
+          description: Name of the auth resource
+        - in: body
+          name: body
+          required: true
+          description: Payload of update exchange authorization request
+          schema:
+            $ref: '#/definitions/ExchangeUpdateRequest'
+      responses:
+        '201':
+          description: Exchange authorization updated.
+          schema:
+            $ref: '#/definitions/ExchangeUpdateResponse'
+        '400':
+          description: Bad Request. Invalid request or validation error.
+          schema:
+            $ref: '#/definitions/Error'
+        '404':
+          description: Exchange not found
+          schema:
+            $ref: '#/definitions/Error'
+        '415':
+          description: >-
+            Unsupported media type. The entity of the request was in a not
+            supported format.
+          schema:
+            $ref: '#/definitions/Error'
+        '401':
+          description: Authentication Data is missing or invalid
+          headers:
+            WWW_Authenticate:
+              type: string
+          schema:
+            $ref: '#/definitions/Error'
     delete:
       operationId: deleteExchange
       summary: Delete exchnage
@@ -517,7 +605,100 @@ paths:
               type: string
           schema:
             $ref: '#/definitions/Error'
-
+  /scopes:
+    get:
+      operationId: getAllScopes
+      summary: Get all scopes
+      description: Retrieves all scopes
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: List of Scopes
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Scope'
+        '401':
+          description: Authentication Data is missing or invalid
+          headers:
+            WWW_Authenticate:
+              type: string
+          schema:
+            $ref: '#/definitions/Error'
+  /scopes/{name}:
+    get:
+      operationId: getScope
+      summary: Get a scope
+      description: Retrieves scope for given scope name
+      parameters:
+        - in: path
+          name: name
+          type: string
+          required: true
+          description: Name of the scope
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Scope
+          schema:
+            $ref: '#/definitions/Scope'
+        '404':
+          description: Scope not found
+          schema:
+            $ref: '#/definitions/Error'
+        '401':
+          description: Authentication Data is missing or invalid
+          headers:
+            WWW_Authenticate:
+              type: string
+          schema:
+            $ref: '#/definitions/Error'
+    put:
+      operationId: updateScope
+      summary: Update a scope
+      description: Update given scope
+      consumes:
+        - application/json
+      parameters:
+        - in: path
+          name: name
+          type: string
+          required: true
+          description: Name of the scope needs to update
+        - in: body
+          name: body
+          required: true
+          description: Payload of scope update request
+          schema:
+            $ref: '#/definitions/ScopeUpdateRequest'
+      responses:
+        '200':
+          description: Scope updated
+          schema:
+            $ref: '#/definitions/ScopeUpdateResponse'
+        '400':
+          description: Bad Request. Invalid request or validation error.
+          schema:
+            $ref: '#/definitions/Error'
+        '401':
+          description: Authentication Data is missing or invalid
+          headers:
+            WWW_Authenticate:
+              type: string
+          schema:
+            $ref: '#/definitions/Error'
+        '404':
+          description: Scope key not found
+          schema:
+            $ref: '#/definitions/Error'
+        '415':
+          description: >-
+            Unsupported media type. The entity of the request was in a not
+            supported format.
+          schema:
+            $ref: '#/definitions/Error'
 definitions:
   ConsumerMetadata:
     title: Consumer Metadata
@@ -595,6 +776,14 @@ definitions:
         description: >-
           If set to true queue will get deleted once all the consumers of the
           queue get disconnected.
+      owner:
+        type: string
+        description: Queue owner
+      permissions:
+        type: array
+        description: Queue action User groups permissions
+        items:
+          $ref : '#/definitions/ActionUserGroupsMapping'
   QueueCreateResponse:
     title: Queue Create Response
     type: object
@@ -604,6 +793,27 @@ definitions:
       message:
         type: string
         description: Response message with status of the queue create operation.
+  QueueUpdateRequest:
+    title: Queue Authorization Update Request
+    type: object
+    properties:
+      owner:
+        type: string
+        description: Owner of queue
+      authorizedUserGroups:
+        type: array
+        description: Queue action User groups mappings
+        items:
+          $ref : '#/definitions/ActionUserGroupsMapping'
+  QueueUpdateResponse:
+    title: Queue Authorization Update Response
+    type: object
+    required:
+      - message
+    properties:
+      message:
+        type: string
+        description: Response message with status of the queue authorization update operation.
   ExchangeMetadata:
     title: Exchange Metadata
     type: object
@@ -617,6 +827,14 @@ definitions:
       durable:
         type: boolean
         description: True if the exchange is durable and false otherwise
+      owner:
+        type: string
+        description: Queue owner
+      permissions:
+        type: array
+        description: Queue action User groups permissions
+        items:
+          $ref : '#/definitions/ActionUserGroupsMapping'
   ExchangeCreateRequest:
     title: Exchange Create Request
     type: object
@@ -643,6 +861,27 @@ definitions:
       message:
         type: string
         description: Response message with status of the exchange create operation.
+  ExchangeUpdateRequest:
+    title: Exchange Authorization Update Request
+    type: object
+    properties:
+      owner:
+        type: string
+        description: Owner of exchange
+      authorizedUserGroups:
+        type: array
+        description: Exchange action User groups mappings
+        items:
+          $ref : '#/definitions/ActionUserGroupsMapping'
+  ExchangeUpdateResponse:
+    title: Exchange Authorization Update Response
+    type: object
+    required:
+      - message
+    properties:
+      message:
+        type: string
+        description: Response message with status of the Exchange authorization update operation.
   BindingSetInfo:
     title: Bindings for a given routing pattern
     type: object
@@ -711,6 +950,43 @@ definitions:
       numberOfMessagesDeleted:
         type: integer
         description: Response message with number of messages deleted.
+  Scope:
+    title: Scope
+    type: object
+    required:
+      - name
+      - userGroups
+    properties:
+      name:
+        type: string
+        description: Scope name
+      authoriedUserGroups:
+        type: array
+        description: User groups of the scope
+        items:
+           type: string
+           description: User group
+  ScopeUpdateRequest:
+    title: User Groups Delete Requet
+    type: object
+    required:
+      - userGroups
+    properties:
+      userGroups:
+        type: array
+        description: Set of user groups for a scope
+        items:
+          type: string
+          description: user group
+  ScopeUpdateResponse:
+    title: User Group Delete Response
+    type: object
+    required:
+      - message
+    properties:
+      message:
+        type: string
+        description: Response message with status of the user groups delete operation.
   Error:
     title: Error Response
     required:
@@ -723,3 +999,18 @@ definitions:
       message:
         type: string
         description: Error message.
+  ActionUserGroupsMapping:
+    title: Resource action user groups permissions
+    type: object
+    required:
+      - permissions
+    properties:
+      action:
+        type: string
+        description: Resource action
+      userGroups:
+        type: array
+        description: Set of user groups for a scope
+        items:
+          type: string
+          description: User group
